Spacing, fix width

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,7 @@
 // DO NOT DELETE THE ABOVE LINES
 
 .container-lg {
-  max-width: 1512;
+  max-width: 1512px;
 }
 
 .playbook-container {
@@ -16,7 +16,7 @@
   justify-content: center;
 
   > nav {
-    padding-right: 10px;
+    padding-right: 20px;
 
     > ul {
       list-style: none;
